--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         /* Seções de Conteúdo */
         section {
             margin-bottom: 60px;
-            padding: 30px 0 80px 0; /* ALTERADO AQUI: Aumentado o padding-bottom para 80px */
+            padding: 30px 0 80px 0; 
             background-color: var(--white);
             border-radius: 12px;
             box-shadow: 0 6px 15px rgba(0,0,0,0.05);
@@ -216,7 +216,7 @@
         .call-to-action p {
             font-family: 'Montserrat', sans-serif;
             font-size: 2.2rem;
-            margin-bottom: 40px;
+            margin-bottom: 20px; /* ALTERADO AQUI: Reduzido de 40px para 20px */
             color: var(--subtitle-color);
             font-weight: 700;
         }
@@ -322,7 +322,7 @@
                 max-width: 200px;
             }
             section {
-                padding: 20px 15px 40px 15px; /* ALTERADO AQUI: Adicionado padding-bottom de 40px */
+                padding: 20px 15px 40px 15px; 
                 margin-top: 25px;
             }
             section h2 {
