--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         /* Chamada para Ação (CTA) */
         .call-to-action {
             text-align: center;
-            margin-top: 50px; /* ALTERADO AQUI: Diminuído de 80px para 50px */
+            margin-top: 50px; 
             padding: 60px 40px;
             background-color: var(--secondary-bg);
             color: var(--text-dark);
@@ -272,7 +272,7 @@
             font-size: 1rem;
             color: var(--text-light);
             border-top: 1px solid var(--border-color);
-            margin-top: 80px;
+            margin-top: 50px; /* ALTERADO AQUI: Diminuído de 80px para 50px */
             background-color: var(--white);
         }
 
@@ -320,8 +320,11 @@
                 padding: 20px 15px 20px 15px; 
                 margin-top: 25px;
             }
-            /* **ALTERAÇÃO AQUI:** Ajusta a margem superior da CTA para telas pequenas */
             .call-to-action {
+                margin-top: 40px; 
+            }
+            /* **NOVO AQUI:** Ajusta a margem superior do rodapé para telas pequenas */
+            footer {
                 margin-top: 40px; 
             }
             section h2 {
